Update capital titles

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
-Main.close="Close";
-Main.minimise="Minimise";
-Main.zoom="Zoom";
+Window.close="Close";
+Window.minimise="Minimise";
+Window.zoom="Zoom";
 Bar.kanban="Kanban";
 Bar.todo="To-Do";
 Bar.shopping="Shopping";
@@ -9,36 +9,36 @@ Bar.home="Home";
 Bar.shop="Purchases";
 Bar.settings="Settings";
 Bar.add="Add";
-Add.title="New Project";
+Add.title="NEW PROJECT";
 Add.subtitle="Choose a type of project";
-Add.available="Available";
-Add.projects="Projects";
-Add.capacity="Capacity";
+Add.available="AVAILABLE";
+Add.projects="PROJECTS";
+Add.capacity="CAPACITY";
 Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
 Add.purchases="See Purchases";
-Add.cancel="Cancel";
-Add.confirm="Add";
-Add.kanban="Kanban";
-Add.todo="To Do List";
-Add.shopping="Shopping List";
-Add.notes="Notes";
+Add.cancel="CANCEL";
+Add.confirm="ADD";
+Add.kanban="KANBAN";
+Add.todo="TO DO LIST";
+Add.shopping="SHOPPING LIST";
+Add.notes="NOTES";
 Kanban.add="New card";
-Kanban.column="Add column";
-Kanban.csv="Export CSV";
+Kanban.column="+ COLUMN";
+Kanban.csv="EXPORT";
 Kanban.new="New";
-Kanban.added="New column";
+Kanban.added="+ COLUMN";
 Kanban.last="Can't delete";
 Kanban.need="You need at least one column in your board.";
 Columner.done="Done";
-Detail.title="Projects";
-Delete.title="Delete";
-Delete.cancel="Cancel";
-Delete.confirm="Delete";
-Delete.done="Deleted";
-Shop.title="Purchases";
-Shop.purchased="Purchased";
-Shop.purchase="Purchase";
-Shop.restore="Restore";
+Detail.title="PROJECTS";
+Delete.title="DELETE";
+Delete.cancel="CANCEL";
+Delete.confirm="DELETE";
+Delete.done="DELETED";
+Shop.title="PURCHASES";
+Shop.purchased="PURCHASED";
+Shop.purchase="PURCHASE";
+Shop.restore="RESTORE";
 Shop.short.two="+2";
 Shop.title.two="\nIncrease your available space for projects by 2.";
 Shop.descr.ios.two="The total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase will increase the total amount of projects you can create on iPhone, iPad and iPod, you will be able to share those projects with your Mac and Apple Watch, but you will still be limited to create additional projects there.";
@@ -51,11 +51,11 @@ Shop.short.hundred="+100";
 Shop.title.hundred="\nIncrease your available space for projects by 100.";
 Shop.descr.ios.hundred="The total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase will increase the total amount of projects you can create on iPhone, iPad and iPod, you will be able to share those projects with your Mac and Apple Watch, but you will still be limited to create additional projects there.";
 Shop.descr.mac.hundred="The total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase will increase the total amount of projects you can create on Mac, you will be able to share those projects with your iPhone, iPod, iPad and Apple Watch, but you will still be limited to create additional projects there.";
-Error="Error";
+Error="ERROR";
 Error.email="Email not configured.";
 Logo="Loading";
 Done="Done";
-Card="Card";
+Card="CARD";
 Card.done="Done";
 Card.move="Move";
 Card.move.position="Position";
@@ -65,8 +65,8 @@ Card.move.done="Done";
 Move.done="Done";
 Move.edit="Edit";
 Move.delete="Delete";
-Column="Column";
-Project="Project";
+Column="COLUMN";
+Project="PROJECT";
 Project.columns="columns";
 Project.cards="cards";
 Project.tasks="tasks";
@@ -88,8 +88,7 @@ Project.waiting="waiting";
 Project.products="products";
 Project.needed="needed";
 About.title="holbox";
-About.done="Done";
-Settings.title="Settings";
+Settings.title="SETTINGS";
 Settings.done="Done";
 Settings.spell="Check spelling";
 Settings.options.0="Privacy";
@@ -99,19 +98,20 @@ Settings.options.3="@holboxapp";
 Settings.options.4="Review on the App Store";
 Settings.subject="Contact";
 Settings.body="Dear holbox, \n\n\n";
-Privacy.title="Privacy";
+Privacy.title="PRIVACY";
 Privacy.label="We do NOT track your activity in any way, not Analytics nor any other event or behaviour metrics. Whatever you do with this app is up to you and we don't want to know about it.\n\nYour projects are codified, compressed and stored locally in your device, they are also sent to a private container in iCloud to be able to share them with your other devices, only you have access to them, if you prefer you can disable iCloud for this app in your device Settings.\n\nNotifications are only used to let you know of important messages or errors while you are using the app. We will NOT send you Push Notifications.";
 Privacy.done="Continue";
 Back="Back";
-Task="Task";
+Task="TASK";
+Product="PRODUCT";
 Product.emoji="Emoji";
 Product.description="Description";
 Todo.add="New task";
-Todo.restart="Re starting task";
-Todo.completed="Done!";
+Todo.restart="RESETING TASK";
+Todo.completed="DONE";
 Shopping.add="New product";
-Shopping.added="Added";
-Shopping.got="Got";
+Shopping.added="NEED";
+Shopping.got="ADDED";
 Shopping.products="Products";
 Stock.add.title="New product";
 Stock.add.done="Add";
