--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -15,7 +15,7 @@ Add.available="AVAILABLE";
 Add.projects="PROJECTS";
 Add.capacity="CAPACITY";
 Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
-Add.purchases="See Purchases";
+Add.purchases="PURCHASES";
 Add.cancel="CANCEL";
 Add.confirm="ADD";
 Add.kanban="KANBAN";
@@ -111,12 +111,12 @@ Shopping.add="New product";
 Shopping.added="NEED";
 Shopping.got="ADDED";
 Shopping.products="Products";
-Stock.add.title="New product";
-Stock.add.done="Add";
-Stock.edit.title="Edit product";
-Stock.edit.done="Done";
-Stock.cancel="Cancel";
-Stock.delete="Delete";
+Stock.add.title="+PRODUCT";
+Stock.add.done="ADD";
+Stock.edit.title="EDIT";
+Stock.edit.done="DONE";
+Stock.cancel="CANCEL";
+Stock.delete="DELETE";
 Stock.add.emoji="🍏";
 Stock.add.label="Apples";
 Note="Note";
