--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -25,7 +25,7 @@ Add.notes="NOTES";
 Kanban.add="New card";
 Kanban.column="+ COLUMN";
 Kanban.csv="EXPORT";
-Kanban.new="New";
+Kanban.new="NEW";
 Kanban.added="+ COLUMN";
 Kanban.last="Can't delete";
 Kanban.need="You need at least one column in your board.";
