--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -104,8 +104,8 @@ Product="PRODUCT";
 Product.emoji="Emoji";
 Product.description="Description";
 Todo.add="New task";
-Todo.restart="RESETING TASK";
-Todo.completed="DONE";
+Todo.restart="RESTART";
+Todo.completed="COMPLETED";
 Shopping.add="New product";
 Shopping.added="NEED";
 Shopping.got="ADDED";
