--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -121,6 +121,7 @@ Stock.add.label="Apples";
 Note="Note";
 Search="Search";
 Find.matches="matches";
+Timeline.now="NOW";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
