--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -83,10 +83,11 @@ Project.modified="Modified";
 Project.created="Created";
 Project.paragraphs="pragraphs";
 Project.sentences="sentences";
-Project.done="done";
-Project.waiting="waiting";
+Project.done="completed";
+Project.waiting="remaining";
 Project.products="products";
-Project.needed="needed";
+Project.need="need";
+Project.have="have";
 About.title="holbox";
 Settings.spell="Check spelling";
 Settings.options.0="Privacy";
