--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -72,13 +72,6 @@ Project.columns="columns";
 Project.cards="cards";
 Project.tasks="tasks";
 Project.words="words";
-Project.english="English";
-Project.german="German";
-Project.spanish="Spanish";
-Project.french="French";
-Project.negative="negative";
-Project.positive="positive";
-Project.neutral="neutral";
 Project.lines="lines";
 Project.modified="Modified";
 Project.created="Created";
@@ -124,6 +117,13 @@ Note="Note";
 Search="Search";
 Find.matches="matches";
 Timeline.now="NOW";
+Language.english="English";
+Language.german="German";
+Language.spanish="Spanish";
+Language.french="French";
+Language.negative="negative";
+Language.positive="positive";
+Language.neutral="neutral";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
