--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@ Bar.home="Home";
 Bar.shop="Purchases";
 Bar.settings="Settings";
 Bar.add="Add";
-Add.title="NEW PROJECT";
+Add.title="NEW\nPROJECT";
 Add.subtitle="Choose a type of project";
 Add.available="AVAILABLE";
 Add.projects="PROJECTS";
