--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -96,25 +96,14 @@ Privacy.title="PRIVACY";
 Privacy.label="We do NOT track your activity in any way, not Analytics nor any other event or behaviour metrics. Whatever you do with this app is up to you and we don't want to know about it.\n\nYour projects are codified, compressed and stored locally in your device, they are also sent to a private container in iCloud to be able to share them with your other devices, only you have access to them, if you prefer you can disable iCloud for this app in your device Settings.\n\nNotifications are only used to let you know of important messages or errors while you are using the app. We will NOT send you Push Notifications.";
 Back="Back";
 Task="TASK";
-Product="PRODUCT";
-Product.emoji="Emoji";
-Product.description="Description";
 Todo.add="New task";
 Todo.restart="RESTART";
 Todo.completed="COMPLETED";
 Todo.count="TASKS";
-Shopping.add="New product";
-Shopping.added="NEED";
-Shopping.got="ADDED";
-Shopping.products="Products";
-Stock.add.title="+PRODUCT";
-Stock.add.done="ADD";
-Stock.edit.title="EDIT";
-Stock.edit.done="DONE";
-Stock.cancel="CANCEL";
-Stock.delete="DELETE";
-Stock.add.emoji="🍏";
-Stock.add.label="Apples";
+Emoji="Emoji";
+Grocery="Grocery";
+Grocery.got="GOT";
+Grocery.need="NEED";
 Note="Note";
 Search="Search";
 Find.matches="matches";
