--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -101,7 +101,7 @@ Todo.restart="RESTART";
 Todo.completed="COMPLETED";
 Todo.count="TASKS";
 Emoji="Emoji";
-Grocery="Grocery";
+Grocery="GROCERY";
 Grocery.got="GOT";
 Grocery.need="NEED";
 Note="Note";
