--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -99,7 +99,8 @@ Task="TASK";
 Todo.add="New task";
 Todo.restart="RESTART";
 Todo.completed="COMPLETED";
-Todo.count="TASKS";
+Todo.count="TASK";
+Todo.counts="TASKS";
 Emoji="Emoji";
 Grocery="GROCERY";
 Grocery.got="GOT";
