Update add grocery

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -102,8 +102,8 @@ Todo.completed="COMPLETED";
 Todo.count="TASK";
 Todo.counts="TASKS";
 Shopping.add="New Grocery";
-Emoji="Emoji";
-Grocery="GROCERY";
+Grocery.emoji="Emoji";
+Grocery.descr="Description";
 Grocery.got="GOT";
 Grocery.need="NEED";
 Note="Note";
