--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -31,6 +31,8 @@ Kanban.last="Can't delete";
 Kanban.need="You need at least one column in your board.";
 Kanban.count="CARDS";
 Columner.done="Done";
+Columner.delete="Delete";
+Columner.edit="Edit";
 Detail.title="PROJECTS";
 Delete.title="DELETE";
 Delete.cancel="CANCEL";
@@ -57,12 +59,6 @@ Error.email="Email not configured.";
 Logo="Loading";
 Done="Done";
 Card="CARD";
-Card.done="Done";
-Card.move="Move";
-Card.move.position="Position";
-Card.move.title="Column";
-Card.delete="Delete";
-Card.move.done="Done";
 Move.done="Done";
 Move.edit="Edit";
 Move.delete="Delete";
