--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -30,9 +30,9 @@ Kanban.added="+ COLUMN";
 Kanban.last="Can't delete";
 Kanban.need="You need at least one column in your board.";
 Kanban.count="CARDS";
-Columner.done="Done";
-Columner.delete="Delete";
-Columner.edit="Edit";
+Edit.done="Done";
+Edit.delete="Delete";
+Edit.edit="Edit";
 Detail.title="PROJECTS";
 Delete.title="DELETE";
 Delete.cancel="CANCEL";
